tests/ui/delegation/generics/generic-params-defaults.stderr
error: defaults for generic parameters are not allowed here
  --> $DIR/generic-params-defaults.rs:5:12
   |
LL |     fn foo<T = usize>(&self) {
   |            ^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #36887 <https://github.com/rust-lang/rust/issues/36887>
   = note: `#[deny(invalid_type_param_default)]` (part of `#[deny(future_incompatible)]`) on by default

error: aborting due to 1 previous error

Future incompatibility report: Future breakage diagnostic:
error: defaults for generic parameters are not allowed here
  --> $DIR/generic-params-defaults.rs:5:12
   |
LL |     fn foo<T = usize>(&self) {
   |            ^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #36887 <https://github.com/rust-lang/rust/issues/36887>
   = note: `#[deny(invalid_type_param_default)]` (part of `#[deny(future_incompatible)]`) on by default

